--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "gridiron",
   "version": "1.0.0",
-  "description": "Framework for simple static sites.",
-  "main": "index.js",
+  "description": "A framework for simple static sites. Built off of [11ty](https://www.11ty.dev) and [Tailwind](https://tailwindcss.com).",
+  "main": ".eleventy.js",
   "scripts": {
-    "start": "eleventy --serve & npx tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js o _site/style.css --watch",
-    "build": "ELEVENTY_PRODUCTION=true eleventy & NODE_ENV=production npx tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css --minify"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,8 +18,6 @@
   },
   "homepage": "https://github.com/csmith49/gridiron#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "html-minifier": "^4.0.0",
-    "tailwindcss": "^3.0.7"
+    "@11ty/eleventy": "^0.12.1"
   }
 }
